# Gproject

./: .gitignore  111.txt  AGENTS.md  CONTRIBUTING  LICENSE  README.md  REVIEW.md  docker-compose.yaml  front需求1.md  开题报告.md
src-backend/: .coverage  .dockerignore  .env.dev  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  DockerFile  pyproject.toml
src-backend/data/datasets/: 11.json
src-backend/docs/: architecture.md
src-backend/docs/api/: index.md
src-backend/docs/plans/: phase-02-data-management-backend.md
src-backend/docs/superpowers/plans/: 2026-05-12-llamafactory-orchestrator-client.md  2026-05-13-code-quality-toolchain.md
src-backend/docs/superpowers/specs/: 2026-05-12-llamafactory-client-design.md  2026-05-13-code-quality-toolchain-design.md
src-backend/src/: main.py
src-backend/src/adapters/: celery_client.py  docker_adapter.py  graphgen.py  graphgen_client.py  llamafactory_async_inference_client.py  llamafactory_client.py  llamafactory_dataset_client.py  llamafactory_export_client.py  llamafactory_inference_client.py  llamafactory_training_client.py
src-backend/src/adapters/repositories/: _utils.py  dataset_log_repo.py  dataset_repo.py  dataset_tag_repo.py  memory_dataset_repo.py  mysql_dataset_repo.py  mysql_dataset_tag_repo.py  mysql_user_repo.py  task_repo.py  user_repo.py  windows_file_repo.py
src-backend/src/app/: __init__.py  dependencies.py  main.py  router.py
src-backend/src/app/middleware/: rate_limiter.py
src-backend/src/app/v1/: admin.py  apis.py  dashboard.py  dataset.py  dataset_tag.py  llamafactory.py  task.py  user.py  ws_progress.py
src-backend/src/core/: __init__.py  audit_info.py  celery.py  config.py  dataset.py  dataset_log.py  dataset_tag.py  docker_job.py  entity_base.py  password_encryptor.py  task.py  task_record.py  user.py
src-backend/src/core/task/: __init__.py  dataset_generating.py  export_monitor_task.py  graphgen_monitor_task.py  training_monitor_task.py
src-backend/src/db_connections/: __init__.py  memory.py  mysql.py  sqlite.py
src-backend/src/services/: __init__.py  chunked_upload_service.py  dataset_clean_service.py  dataset_create_service.py  dataset_get_service.py  dataset_import_export_service.py  dataset_process_service.py  dataset_remove_service.py  dataset_tag_service.py  dataset_update_service.py  jwt_service.py  llamafactory_service.py  progress_manager.py  user_get_service.py  user_login_service.py  user_manage_service.py  user_register_service.py  user_update_service.py  utils.py
src-backend/src/services/interfaces/: audit_info_repository.py  dataset_generator.py  dataset_repository.py  dataset_tag_repository.py  (+7 more)
src-backend/src/tasks/: celery_app.py  dataset_tasks.py
src-backend/tests/: __init__.py  _debug_upload.py  conftest.py  e2e_test_flow.py  test_chunked_upload.py  test_dataset_add_tags.py  test_dataset_service.py  test_dataset_service_integration.py  test_docker_adapter.py  test_docker_job.py  test_graphgen_client.py  test_http_client.py  test_llamafactory_dataset_client.py  test_llamafactory_inference_client.py  test_llamafactory_router.py  test_llamafactory_service.py  test_mysql_user_repo.py  test_process_sample.py  test_process_service.py  test_progress_manager.py  test_pytest_baseline.py  test_routes.py  test_service_factory.py  test_sqlite_dataset_service.py  test_tag_repo.py  test_tag_service.py  test_user_login_service.py  test_user_repo.py
src-backend/tests/_test_files/: test.csv
src-backend/tests/test_apis/: test_dataset_api.py
src-celery/: .dockerignore  Dockerfile  config.py  main.py  pyproject.toml  tasks.py
(+471 files in other folders)
