[project]
name = "gproject-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "celery (>=5.6.3,<6.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "pymysql (>=1.1.0,<2.0.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "aiomysql (>=0.3.2,<0.4.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "python-multipart (>=0.0.27,<0.0.28)",
    "redis (>=7.4.0,<8.0.0)",
    "msgspec (>=0.21.1,<0.22.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "litestar (>=2.21.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "pysqlite3 (>=0.6.0,<0.7.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
]
