[project]
name = "gproject-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "celery (>=5.6.3,<6.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "pymysql (>=1.1.0,<2.0.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "aiomysql (>=0.3.2,<0.4.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "python-multipart (>=0.0.27,<0.0.28)",
    "redis (>=7.4.0,<8.0.0)",
    "msgspec (>=0.21.1,<0.22.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "websockets (>=14.0,<15.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "ruff (>=0.11.0,<1.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
]

# ── Ruff ─────────────────────────────────────────────────────

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line-length 交给 formatter
    "B008",   # FastAPI Depends() 在默认参数中是惯用写法
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy ─────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
explicit_package_bases = true

# ── Pytest ───────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
