[project]
name = "gproject-celery"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "celery>=5.6",
    "httpx>=0.28",
    "redis>=7.4",
    "pydantic-settings>=2.14",
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
